@@ -29,7 +29,7 @@
  * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  * POSSIBILITY OF SUCH DAMAGE.
  */
-#include "../opj_config.h"
+#include "opj_config.h"
 
 #include <stdio.h>
 #include <stdlib.h>
